--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GOOGLE_CLIENT_ID=438183030917-3771op6jnhre49gjrghcsnud5udg4kue.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID="438183030917-3771op6jnhre49gjrghcsnud5udg4kue.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
