--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "fs": "0.0.1-security",
     "next": "^13.0.6",
     "next-auth": "^4.19.2",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
+    "qrcode-terminal": "^0.12.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "resolve": "^1.22.1",
+    "whatsapp-web.js": "^1.19.4"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
